# google_ads_mcp_server

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
tests/: main_test.py
